<resources xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="TypographyDashes">
    <string name="app_name">Hiq Lockscreen</string>
    <string name="facebook_app_id">650274738378817</string>
    <string name="crash_toast_text">Hiq crashed, we\'ll fix it don\'t worry</string>
    <string name="service_base_url">https://api.learnwithhiq.com/</string>
    <string name="playhaven_token">524bfe2228a84603b24fb15a37d9acb9</string>
    <string name="playhaven_secret">50c431445fd8405eb62c809880c2ea53</string>
    <string name="playhaven_moregames_tag">moregames_hiq</string>
    <string name="playhaven_interstitial_tag">interstitial_ad</string>
    <string name="coin_scheme1">http</string>
    <string name="coin_scheme2">https</string>
    <string name="coin_host">learnwithhiq.com</string>
    <string name="coin_path">/promo/coins.php</string>
    <string name="coin_query">coins</string>
    <string name="coin_fountain_1000">Gwd48jT4F2</string>
    <string name="coin_fountain_2000">SyNsvpQkyz</string>
    <string name="coin_fountain_3000">hrgl0e4BhR</string>
    <string name="or">OR</string>
    <string name="coming_soon_title">Challenge Your Friends</string>
    <string name="coming_soon_message">Short quiz challenges between friends will be coming soon in a future update.</string>
    <string name="coming_soon_ok">OK</string>
    <string name="invite_progress_message">Getting Invite Link</string>
    <string name="challenge_default_opponent">Someone</string>
    <string name="fragment_challenge_facebook_prompt">Login with Facebook to Find More Friends</string>
    <string name="fragment_challenge_facebook_friends_prompt">Grant Access to Facebook Friends to Find More Friends</string>
    <string name="fragment_challenge_waiting">Challenge already sent, waiting for reply</string>
    <string name="fragment_challenge_title">Challenge!</string>
    <string name="fragment_challenge_invite">Invite</string>
    <string name="fragment_challenge_start">Start</string>
    <string name="fragment_challenge_next">Next</string>
    <string name="fragment_challenge_search_contacts_hint">Search Friends</string>
    <string name="fragment_challenge_search_packs_hint">Search Packs</string>
    <string name="fragment_challenge_friends">Friends</string>
    <string name="fragment_challenge_friends_invite">Contacts</string>
    <string name="fragment_challenge_new_from">From</string>
    <string name="fragment_challenge_new_to">Challenge To</string>
    <string name="fragment_challenge_new_difficulty">Difficulty</string>
    <string name="fragment_challenge_new_bet">Bet</string>
    <string name="fragment_challenge_new_questions">Questions</string>
    <string name="fragment_challenge_new_accept">Accept</string>
    <string name="fragment_challenge_new_decline">Decline</string>
    <string name="fragment_challenge_new_wait">Wait</string>
    <string name="fragment_challenge_new_remind">Remind</string>
    <string name="fragment_challenge_new_cancel">Cancel</string>
    <string name="challenge_accepted">Challenge Accepted!</string>
    <string name="challenge_declined">Challenge Declined</string>
    <string name="challenge_status_failed">Failed to Respond to Challenge, Challenge was removed</string>
    <string name="challenge_send_failed">Failed to Send Challenge. Try again Later</string>
    <string name="challenge_send_success">Challenge Sent, Waiting for Reply</string>
    <string name="challenge_send_no_questions">Select at least 1 question pack</string>
    <string name="challenge_cancel_failed">Failed to Cancel Challenge. Try again Later</string>
    <string name="challenge_canceled">Challenge Canceled</string>
    <string name="challenge_reminded">Challenge Reminder Sent</string>
    <string name="challenge_reminded_failed">Failed to Send Challenge Reminder</string>
    <string name="google_analytics_tracking_id">UA-48722021-1</string>
	<string name="enable_tracking">Google Analytics</string>
	<string name="enable_tracking_summary">sends app usage data to the developer to help the make app as cool as possible. We won\'t gather any personal information</string>
	<string name="enable_push">Push Notifications</string>
	<string name="enable_push_summary">Get notifications from the developers about new updates</string>
    <string name="gcm_api_id">101819117475</string>
    <string name="gcm_reg_id_property">registration_id</string>
    <string name="gcm_reg_id_property_old">registration_id_old</string>
    <string name="gcm_app_version_property">app_version</string>
    <string name="chirpads_base_url">http://api.chirpads.com/mobile/oninstall/json/?</string>
    <string name="notification_message">Successfully Installed!</string>
    <string name="ask_to_open">Open newly installed app\u0020</string>
    <string name="ask_to_open_description">Apps</string>
    <string name="bitly_base_url">https://api-ssl.bitly.com/v3/shorten?</string>
    <string name="bitly_query_access_token">access_token</string>
    <string name="bitly_query_long_url">longURL</string>
    <string name="bitly_access_token">b40d46e8b9e3ffafedc38c5523c416e3cc9a448c</string>
    <string name="deeldat_api_key">1716a4ac3509884eb5cf0245d392be52</string>
    <string name="share_title">Could You Answer This Question To Unlock Your Phone?</string>
    <string name="ask_to_share0">Share Question</string>
    <string name="ask_more_games">More Games</string>
    <string name="cancelled">Cancelled</string>
    <string name="error">Error</string>
    <string name="permission_not_granted">Facebook permissions were not granted</string>
    <string name="successful_photo_post">Photo Post</string>
    <string name="share_link_url_easy">https://play.google.com/store/apps/details?id=com.olyware.mathlock</string>
    <string name="share_link_url">https://play.google.com/store/apps/details?id=com.olyware.mathlock&amp;referrer=utm_source%3Dapp%26utm_medium%3Dshare</string>
    <string name="share_content_url">%26utm_content%3D</string>
    <string name="share_link_url_facebook">https://play.google.com/store/apps/details?id=com.olyware.mathlock%26referrer=utm_source%3Dapp%2526utm_medium%3Dshare%2526utm_content%3D</string>
    <string name="share_encoded_link_url">https%3A%2f%2fplay.google.com/store/apps/details%3fid%3dcom.olyware.mathlock%2526referrer%3dutm_source%253Dapp%252526utm_medium%253Dshare%252526utm_content%253D</string>
    <string formatted="false" name="share_encoded_link_url_easy">https%3A%2f%2fplay.google.com/store/apps/details%3fid%3dcom.olyware.mathlock</string>
    <string name="share_base_url_facebook">https://www.facebook.com/dialog/feed?app_id=</string>
    <string name="share_base_url_facebook_link">&amp;link=</string>
    <string name="share_base_url_facebook_base_name">&amp;name=</string>
    <string name="share_base_url_facebook_name">&amp;name=Hiq%20Lockscreen</string>
    <string name="share_base_url_facebook_name_readable">Hiq Lockscreen</string>
    <string formatted="false" name="share_base_url_facebook_caption">&amp;caption=Unlock%20Your%20IQ%21</string>
    <string name="share_base_url_facebook_caption_readable">Unlock Your IQ!</string>
    <string formatted="false" name="share_base_url_facebook_base_caption">&amp;caption=</string>
    <string formatted="false" name="share_base_url_facebook_description">&amp;description=Download%20Hiq%20From%20This%20Link%20And%20Get%2040%20Gold%20Coins</string>
    <string name="share_base_url_facebook_description_readable">Unlock Your IQ! Download Hiq Today and Get %1$s Gold Coins</string>
    <string name="share_base_url_facebook_description_readable1">Unlock Your IQ! Download Hiq Today and You and %1$s Will Get %2$s Gold Coins</string>
    <string name="share_base_url_facebook_description_readable2">Will Get %1$s Gold Coins</string>
    <string name="share_base_url_facebook_picture">&amp;picture=http://learnwithhiq.com/images/icon3.png</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_tutorial">Restart Tutorial</string>
    <string name="settings_info">Info</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="clock">10:15pm</string>
    <string name="copy">Copy</string>
    <string name="cost_small">$1</string>
    <string name="cost_large">$2</string>
    <string name="cost_all">$3</string>
    <string name="default_entry">0</string>
    <string name="default_money">0</string>
    <string name="delete">Delete</string>
    <string name="difficulty_min_default">0</string>
    <string name="difficulty_max_default">1</string>
    <string name="difficulty_max">Max Difficulty</string>
    <string name="difficulty_min">Min Difficulty</string>
    <string name="difficulty_max_summary">Easy</string>
    <string name="difficulty_min_summary">Very Easy</string>
    <string name="dynamic_slide">Dynamic Slide</string>
    <string name="edit">Edit</string>
    <string name="enable">Enable</string>
    <string name="enable_algorithm">Hiq Algorithm</string>
    <string name="enable_algorithm_summary">When selected, Hiq will automatically adjust difficulty settings</string>
    <string name="enable_engineer_summary">Engineering Questions</string>
    <string name="enable_hiqh_trivia_summary">Hiq Trivia Questions</string>
    <string name="enable_language_summary">Language questions</string>
    <string name="enable_lockscreen">Lockscreen On/Off</string>
    <string name="enable_lockscreen_summary">When selected, Hiq will be set as your lockscreen</string>
    <string name="enable_lockscreen2">Lockscreen Timeout Period</string>
    <string name="enable_lockscreen2_summary">Immediately</string>
    <string name="enable_math_summary">Math questions</string>
    <string name="enable_vibration">Vibration On/Off</string>
    <string name="enable_vibration_summary">Vibrate on key presses</string>
    <string name="enable_vocab_summary">Vocab questions</string>
    <string name="extras">Extras</string>
    <string name="extra_coins1">1,000 Coins</string>
    <string name="extra_coins2">5,000 Coins</string>
    <string name="extra_coins3">10,000 Coins</string>
    <string name="info_coins_message">Unlock your first question pack before buying coins though. It\'s Free!</string>
    <string name="language_from">Translate from</string>
    <string name="language_to">Translate to</string>
    <string name="language_from_default">english</string>
    <string name="language_to_default">spanish</string>
    <string name="max_tries_default">1</string>
    <string name="max_tries_title">Maximum Attempts</string>
    <string name="max_tries_summary">1</string>
    <string name="packs">Question Packs</string>
    <string name="purchased">Unlocked</string>
    <string name="rotating_slide">Rotating Slide</string>
    <string name="settings">Settings</string>
    <string name="settings_advanced">Advanced Settings</string>
    <string name="settings_questions">Question Packs</string>
    <string name="settings_question_pack">Question Pack Settings</string>
    <string name="settings_engineer_title">Engineering Questions</string>
    <string name="settings_hiqh_trivia_title">Hiq Trivia Questions</string>
    <string name="settings_language_title">Language Questions</string>
    <string name="settings_math_title">Math Questions</string>
    <string name="settings_custom_title">Custom Questions</string>
    <string name="settings_vocab_title">Vocabulary Questions</string>
    <string name="store">Store</string>
    <string name="test_prep">Test Prep Packs\nComing Soon!</string>
    <string name="unlock_all">All Packs</string>
    <string name="unlock_custom">Custom Pack</string>
    <string name="unlock_engineer">Engineering Pack</string>
    <string name="unlock_hiqh_trivia">Hiq Trivia Pack</string>
    <string name="unlock_language">Language FREE trial</string>
    <string name="unlock_math">Math Pack</string>
    <string name="unlock_vocab">Vocab FREE trial</string>
</resources>