<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	<TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:text="@string/info_coins_message" />
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:baselineAligned="false" >
	    <Button
	        android:id="@+id/copy"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:maxLines="1"
	        android:textSize="14sp"
	        android:text="@string/copy" />
	    <Button
	        android:id="@+id/edit"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:maxLines="1"
	        android:textSize="14sp"
	        android:text="@string/edit" />
	    <Button
	        android:id="@+id/delete"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:maxLines="1"
	        android:textSize="14sp"
	        android:text="@string/delete" />
	    <Button
	        android:id="@+id/cancel"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:maxLines="1"
	        android:textSize="14sp"
	        android:text="@string/cancel" />
	    </LinearLayout>
</LinearLayout>