<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:id="@+id/layout" >
	<LinearLayout 
	   	android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:orientation="horizontal" >
       	<ImageButton
		    android:id="@+id/back"
		    android:contentDescription="@string/back"
		    android:enabled="true"
		    android:layout_gravity="center_vertical"
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:background="@drawable/back"/>
    	<TextView
	    	android:id="@+id/money"
	    	android:gravity="center_vertical"
	    	android:layout_width="wrap_content"
	    	android:layout_height="fill_parent"
	    	android:textSize="25sp"
	    	android:drawableLeft="@drawable/coins"
	    	android:text="@string/default_money"/>
    	<TextView
	    	android:id="@+id/store"
	    	android:gravity="center_vertical|right"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:textSize="45sp"
	    	android:textStyle="bold"
	    	android:text="@string/store"/>
	</LinearLayout>
	<LinearLayout
	   	android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:orientation="horizontal" >
		<Button
		    android:id="@+id/extra_coins1"
		    android:enabled="false"
		    android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:layout_weight="5"
			android:text="@string/extra_coins1"
			android:textSize="20sp"
			android:textStyle="bold"/>
		<TextView
	    	android:id="@+id/cost_small"
	    	android:gravity="center_vertical|right"
	    	android:layout_width="0dp"
	    	android:layout_weight="1"
	    	android:layout_height="fill_parent"
	    	android:textSize="20sp"
	    	android:text="@string/cost_small"/>
	</LinearLayout>
	<LinearLayout
	   	android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:orientation="horizontal" >
		<Button
		    android:id="@+id/extra_coins2"
		    android:enabled="false" 
		    android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:layout_weight="5"
			android:text="@string/extra_coins2"
			android:textSize="20sp"
			android:textStyle="bold"/>
		<TextView
	    	android:id="@+id/cost_large"
	    	android:gravity="center_vertical|right"
	    	android:layout_width="0dp"
	    	android:layout_weight="1"
	    	android:layout_height="fill_parent"
	    	android:textSize="20sp"
	    	android:text="@string/cost_large"/>
	</LinearLayout>
	<LinearLayout
	   	android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:orientation="horizontal" >
		<Button
		    android:id="@+id/extra_coins3"
		    android:enabled="false" 
		    android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:layout_weight="5"
			android:text="@string/extra_coins3"
			android:textSize="20sp"
			android:textStyle="bold"/>
		<TextView
	    	android:id="@+id/cost_all"
	    	android:gravity="center_vertical|right"
	    	android:layout_width="0dp"
	    	android:layout_weight="1"
	    	android:layout_height="fill_parent"
	    	android:textSize="20sp"
	    	android:text="@string/cost_all"/>
	</LinearLayout>
	
	<ScrollView
	    android:layout_width="match_parent"
		android:layout_height="wrap_content" >
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    <TextView
		    	android:id="@+id/packs"
		    	android:gravity="center"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:textSize="30sp"
		    	android:text="@string/packs"/>
			<LinearLayout
			   	android:layout_width="match_parent"
		       	android:layout_height="wrap_content"
		       	android:orientation="horizontal" >
				<Button
				    android:id="@+id/unlock_all"
				    android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="4"
					android:text="@string/unlock_all"
					android:textSize="20sp"
					android:textStyle="bold"/>
				<TextView
			    	android:id="@+id/all_cost"
			    	android:gravity="center_vertical|right"
			    	android:layout_width="0dp"
			    	android:layout_weight="3"
			    	android:layout_height="fill_parent"
			    	android:textSize="20sp"
			    	android:drawableRight="@drawable/coin"
			    	android:text="@string/purchased"/>
			</LinearLayout>
			<LinearLayout
			   	android:layout_width="match_parent"
		       	android:layout_height="wrap_content"
		       	android:orientation="horizontal" >
				<Button
				    android:id="@+id/unlock_math"
				    android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="4"
					android:text="@string/unlock_math"
					android:textSize="20sp"
					android:textStyle="bold"/>
				<TextView
			    	android:id="@+id/math_cost"
			    	android:gravity="center_vertical|right"
			    	android:layout_width="0dp"
			    	android:layout_weight="3"
			    	android:layout_height="fill_parent"
			    	android:textSize="20sp"
			    	android:drawableRight="@drawable/coin"
			    	android:text="@string/purchased"/>
			</LinearLayout>
			<LinearLayout
			   	android:layout_width="match_parent"
		       	android:layout_height="wrap_content"
		       	android:orientation="horizontal" >
				<Button
				    android:id="@+id/unlock_vocab"
				    android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="4"
					android:text="@string/unlock_vocab"
					android:textSize="20sp"
					android:textStyle="bold"/>
				<TextView
			    	android:id="@+id/vocab_cost"
			    	android:gravity="center_vertical|right"
			    	android:layout_width="0dp"
			    	android:layout_weight="3"
			    	android:layout_height="fill_parent"
			    	android:textSize="20sp"
			    	android:drawableRight="@drawable/coin"
			    	android:text="@string/purchased"/>
			</LinearLayout>
			<LinearLayout
			   	android:layout_width="match_parent"
		       	android:layout_height="wrap_content"
		       	android:orientation="horizontal" >
				<Button
				    android:id="@+id/unlock_language" 
				    android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="4"
					android:text="@string/unlock_language"
					android:textSize="20sp"
					android:textStyle="bold"/>
				<TextView
			    	android:id="@+id/language_cost"
			    	android:gravity="center_vertical|right"
			    	android:layout_width="0dp"
			    	android:layout_weight="3"
			    	android:layout_height="fill_parent"
			    	android:textSize="20sp"
			    	android:drawableRight="@drawable/coin"
			    	android:text="@string/purchased"/>
			</LinearLayout>
			<LinearLayout
			   	android:layout_width="match_parent"
		       	android:layout_height="wrap_content"
		       	android:orientation="horizontal" >
				<Button
				    android:id="@+id/unlock_engineer" 
				    android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="4"
					android:text="@string/unlock_engineer"
					android:textSize="20sp"
					android:textStyle="bold"/>
				<TextView
			    	android:id="@+id/engineer_cost"
			    	android:gravity="center_vertical|right"
			    	android:layout_width="0dp"
			    	android:layout_weight="3"
			    	android:layout_height="fill_parent"
			    	android:textSize="20sp"
			    	android:drawableRight="@drawable/coin"
			    	android:text="@string/purchased"/>
			</LinearLayout>
			<LinearLayout
			   	android:layout_width="match_parent"
		       	android:layout_height="wrap_content"
		       	android:orientation="horizontal" >
				<Button
				    android:id="@+id/unlock_hiqh_trivia" 
				    android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="4"
					android:text="@string/unlock_hiqh_trivia"
					android:textSize="20sp"
					android:textStyle="bold"/>
				<TextView
			    	android:id="@+id/hiqh_trivia_cost"
			    	android:gravity="center_vertical|right"
			    	android:layout_width="0dp"
			    	android:layout_weight="3"
			    	android:layout_height="fill_parent"
			    	android:textSize="20sp"
			    	android:drawableRight="@drawable/coin"
			    	android:text="@string/purchased"/>
			</LinearLayout>
			<LinearLayout
			   	android:layout_width="match_parent"
		       	android:layout_height="wrap_content"
		       	android:orientation="horizontal" >
				<Button
				    android:id="@+id/unlock_custom"
				    android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="4"
					android:text="@string/unlock_custom"
					android:textSize="20sp"
					android:textStyle="bold"/>
				<TextView
			    	android:id="@+id/custom_cost"
			    	android:gravity="center_vertical|right"
			    	android:layout_width="0dp"
			    	android:layout_weight="3"
			    	android:layout_height="fill_parent"
			    	android:textSize="20sp"
			    	android:drawableRight="@drawable/coin"
			    	android:text="@string/purchased"/>
			</LinearLayout>
			
			<TextView
		    	android:id="@+id/extras"
		    	android:gravity="center"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:textSize="30sp"
		    	android:text="@string/extras"/>
			<LinearLayout
			   	android:layout_width="match_parent"
		       	android:layout_height="wrap_content"
		       	android:orientation="horizontal" >
				<Button
				    android:id="@+id/unlock_rotating_slide"
				    android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="4"
					android:text="@string/rotating_slide"
					android:textSize="20sp"
					android:textStyle="bold"/>
				<TextView
			    	android:id="@+id/rotating_slide_cost"
			    	android:gravity="center_vertical|right"
			    	android:layout_width="0dp"
			    	android:layout_weight="3"
			    	android:layout_height="fill_parent"
			    	android:textSize="20sp"
			    	android:drawableRight="@drawable/coin"
			    	android:text="@string/purchased"/>
			</LinearLayout>
			<LinearLayout
			   	android:layout_width="match_parent"
		       	android:layout_height="wrap_content"
		       	android:orientation="horizontal" >
				<Button
				    android:id="@+id/unlock_dynamic_slide"
				    android:layout_height="wrap_content"
					android:layout_width="0dp"
					android:layout_weight="4"
					android:text="@string/dynamic_slide"
					android:textSize="20sp"
					android:textStyle="bold"/>
				<TextView
			    	android:id="@+id/dynamic_slide_cost"
			    	android:gravity="center_vertical|right"
			    	android:layout_width="0dp"
			    	android:layout_weight="3"
			    	android:layout_height="fill_parent"
			    	android:textSize="20sp"
			    	android:drawableRight="@drawable/coin"
			    	android:text="@string/purchased"/>
			</LinearLayout>

			<TextView
		    	android:id="@+id/test_prep"
		    	android:gravity="center"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:textSize="30sp"
		    	android:text="@string/test_prep"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>